# twiggy

./: .gitignore  .rustfmt.toml  .travis.yml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  dominator-tree.dot  index.html  install.html  notes.txt  print.html  publish.sh  searchindex.js  searchindex.json  supported-binary-formats.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy_docs.yml  main.yml
analyze/: Cargo.toml  analyze.rs  csv.rs  json.rs
analyze/analyses/: diff.rs  dominators.rs  garbage.rs  mod.rs  monos.rs  paths.rs  top.rs  utils.rs
analyze/analyses/diff/: emit.rs  entry.rs  mod.rs
analyze/analyses/dominators/: emit.rs  mod.rs
analyze/analyses/monos/: emit.rs  entry.rs  mod.rs
analyze/analyses/paths/: mod.rs  paths_emit.rs  paths_entry.rs
analyze/formats/: json.rs  mod.rs  table.rs
analyze/tests/: top.rs
ci/: script.sh
concepts/: call-graph.html  dominators-and-retained-size.html  generic-functions-and-monomorphization.html  index.html  paths.html
contributing/: building.html  code-formatting.html  index.html  pull-requests.html  team.html  testing.html
guide/: book.toml
guide/src/: SUMMARY.md  contributing.md  index.md  install.md  supported-binary-formats.md
guide/src/concepts/: call-graph.dot  call-graph.md  dominators-and-retained-size.md  generic-functions-and-monomorphization.md  index.md  paths.md
guide/src/contributing/: building.md  code-formatting.md  index.md  pull-requests.md  team.md  testing.md
guide/src/theme/css/: general.css
guide/src/usage/: as-a-crate.md  index.md  on-the-web-with-webassembly.md
guide/src/usage/command-line-interface/: diff.md  dominators.md  garbage.md  index.md  monos.md  paths.md  top.md
ir/: Cargo.toml  demangle.rs  graph_impl.rs  ir.rs
job_runner/: Cargo.toml
job_runner/src/: main.rs
opt/: Cargo.toml  build.rs  definitions.rs  opt.rs
parser/: Cargo.toml  parser.rs  wasm.rs
parser/object_parse/: mod.rs
parser/object_parse/compilation_unit_parse/: mod.rs
parser/object_parse/die_parse/: item_kind.rs  item_name.rs  location_attrs.rs  mod.rs
parser/wasm_parse/: mod.rs
releases/: release-announcement-template.md
svelte/: Cargo.toml  svelte.rs
svelte/src/: lib.rs
svelte/tests/: tests.rs
svelte/tests/expectations/: dominators_wee_alloc  dominators_wee_alloc_with_depth_and_row  paths_mappings_index  paths_wee_alloc  paths_wee_alloc_with_depth_and_rows  top_mappings  top_retained_mappings  top_retained_wee_alloc  top_wee_alloc
traits/: Cargo.toml  traits.rs
twiggy/: Cargo.toml  cargo-twiggy.rs  cli.rs  twiggy.rs
twiggy/tests/: tests.rs
twiggy/tests/all/: diff_tests.rs  dominators_tests.rs  elf_format_tests.rs  garbage_tests.rs  main.rs  monos_tests.rs  paths_tests.rs  top_tests.rs
twiggy/tests/all/expectations/: cpp_monos  diff_test_exact_wee_alloc  diff_test_regex_wee_alloc  diff_wee_alloc  diff_wee_alloc_all  diff_wee_alloc_all_json  diff_wee_alloc_csv  diff_wee_alloc_csv_top_5  diff_wee_alloc_json  diff_wee_alloc_json_top_5  diff_wee_alloc_top_5  dominators_csv_does_not_summarize_garbage_if_all_items_are_reachable  dominators_json_prints_multiple_root_items  dominators_regex_any_func  dominators_summarizes_unreachable_items  dominators_wee_alloc  dominators_wee_alloc_csv  dominators_wee_alloc_json  dominators_wee_alloc_subtree  dominators_wee_alloc_subtree_json  dominators_wee_alloc_with_depth_and_row  elf_dominators  elf_dominators2  elf_dominators3  elf_paths  elf_paths2  elf_top_25_hello_world_rs  elf_top_hello_world_rs  garbage  garbage_json  garbage_top_2  garbage_top_2_json  garbage_wee_alloc_all  garbage_wee_alloc_all_json  garbage_wee_alloc_top_10  garbage_wee_alloc_top_10_json  garbage_wee_alloc_top_2_show_data_segments  garbage_wee_alloc_top_2_show_data_segments_json  issue_16  monos  (+47 more)
twiggy/tests/all/fixtures/: cpp-monos.wasm  garbage.wat  hello_elf  hello_world.rs  mappings.wasm  memory.wasm  monos.rs  monos.wasm  moonbit_hello_debug.wasm  moonbit_list.wasm  moonbit_vec.wasm  paths_test.wasm  threads.wasm  threads.wat  threads_working.wasm  wee_alloc.2.wasm
twiggy/tests/expectations/: cpp_monos  diff_wee_alloc  diff_wee_alloc_json  diff_wee_alloc_json_top_5  dominators_regex_any_func  dominators_wee_alloc  dominators_wee_alloc_csv  dominators_wee_alloc_subtree  dominators_wee_alloc_with_depth_and_row  elf_top_25_hello_world_rs  elf_top_hello_world_rs  garbage  garbage_json  garbage_top_2  garbage_wee_alloc_all  garbage_wee_alloc_top_10  monos  monos_all_monos  monos_json  monos_maxes  monos_only_generics  monos_wasm_csv  paths_test_called_once  paths_test_default_output_desc  paths_test_default_output_desc_with_depth  paths_test_regex_exports_desc  paths_wee_alloc  paths_wee_alloc_csv  paths_wee_alloc_json  top_2_csv  top_2_csv_retained  top_2_json  top_2_json_retained  top_mappings  top_retained_mappings  top_retained_wee_alloc  top_wee_alloc
twiggy/tests/fixtures/: cpp-monos.cpp  garbage.wasm  hello_elf  hello_world.rs  paths_test.wat  wee_alloc.wasm
usage/: as-a-crate.html  index.html  on-the-web-with-webassembly.html
usage/command-line-interface/: diff.html  dominators.html  garbage.html  index.html  monos.html  paths.html  top.html
wasm-api/: Cargo.toml  wasm-api.rs
