[workspace]
members = [
  "./analyze",
  "./ir",
  "./opt",
  "./parser",
  "./twiggy",
  "./traits",
  "./wasm-api"
]

[profile.release]
lto = true
debug = true
opt-level = "s"

[patch.crates-io.structopt]
git = "https://github.com/fitzgen/structopt.git"
branch = "proc-macro2-nightly-feature-workaround"
