[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Analyses for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-analyze"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.3.0"

[lib]
path = "./analyze.rs"

[dependencies]
twiggy-ir = { version = "=0.3.0", path = "../ir" }
twiggy-opt = { version = "=0.3.0", path = "../opt", default-features = false }
twiggy-traits = { version = "=0.3.0", path = "../traits" }
csv = "1.0.5"
regex = "1.1.0"
serde = "1.0.83"
serde_derive = "1.0.83"
petgraph = "0.4.13"

[features]
default = ["emit_csv", "emit_json", "emit_text"]
emit_json = ["twiggy-traits/emit_json"]
emit_csv = ["twiggy-traits/emit_csv"]
emit_text = ["twiggy-traits/emit_text"]
