[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Intermediate representation for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-ir"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.7.0"
edition = "2018"

[lib]
path = "./ir.rs"

[dependencies]
cpp_demangle = { version = "0.3.5", default-features = false }
frozen = "1"
petgraph = "0.6.3"
rustc-demangle = "0.1.21"
serde = "1.0"
serde_derive = "1.0"
