[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Options for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-opt"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.2.0"

[lib]
path = "opt.rs"

[build-dependencies]
regex = "1.0.2"

[dependencies]
structopt = { version = "0.2", optional = true }
twiggy-traits = { version = "=0.2.0", path = "../traits" }
wasm-bindgen = { version = "0.2.12", optional = true }
cfg-if = "0.1.4"

[features]
default = ["cli", "emit_csv", "emit_json", "emit_text"]
cli = ["structopt"]
wasm = ["wasm-bindgen"]
emit_json = ["twiggy-traits/emit_json"]
emit_text = ["twiggy-traits/emit_text"]
emit_csv = ["twiggy-traits/emit_csv"]
