[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Options for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-opt"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.6.0"
edition = "2018"

[lib]
path = "opt.rs"

[build-dependencies]
regex = "1.3.9"

[dependencies]
structopt = { version = "0.3", optional = true }
twiggy-traits = { version = "=0.6.0", path = "../traits" }
wasm-bindgen = { version = "0.2.65", optional = true }
cfg-if = "1.0.0"

[features]
default = ["cli", "emit_csv", "emit_json", "emit_text"]
cli = ["structopt"]
wasm = ["wasm-bindgen"]
emit_json = ["twiggy-traits/emit_json"]
emit_text = ["twiggy-traits/emit_text"]
emit_csv = ["twiggy-traits/emit_csv"]
