[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Common traits for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-parser"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.6.0"
edition = "2018"

[lib]
path = "./parser.rs"

[dependencies]
fallible-iterator = { version = "0.2.0", optional = true }
gimli = { version = "0.22.0", optional = true, default-features = false, features = ["std", "read"] }
object = { version = "0.17.0", optional = true }
wasmparser = "0.59.0"
typed-arena = { version = "2.0.1", optional = true }
twiggy-ir = { version = "=0.6.0", path = "../ir" }
twiggy-traits = { version = "=0.6.0", path = "../traits" }

[features]
default = ["dwarf"]
dwarf = ["fallible-iterator", "gimli", "object", "typed-arena", "twiggy-traits/dwarf"]
