[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Common traits for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-parser"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.7.0"
edition = "2018"

[lib]
path = "./parser.rs"

[dependencies]
anyhow = "1.0"
object = { version = "0.36.7", optional = true }
wasmparser = "0.205.0"
twiggy-ir = { version = "=0.7.0", path = "../ir" }
twiggy-traits = { version = "=0.7.0", path = "../traits" }

[features]
default = ["dwarf"]
dwarf = ["object", "twiggy-traits/dwarf"]
