[package]
description = "A code size profiler"
name = "svelte"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]

[dependencies]
failure = "0.1.1"
structopt = "0.2"
svelte-analyze = { version = "0.1.0", path = "../analyze" }
svelte-ir = { version = "0.1.0", path = "../ir" }
svelte-opt = { version = "0.1.0", path = "../opt" }
svelte-parser = { version = "0.1.0", path = "../parser" }
svelte-traits = { version = "0.1.0", path = "../traits" }
