[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = []
description = "Common traits for the Twiggy code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy-traits"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.7.0"
edition = "2018"

[lib]
path = "./traits.rs"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
gimli = { version = "0.28.1", optional = true, default-features = true, features = ["std", "read"] }
wasmparser = "0.118.1"
twiggy-ir = { version = "=0.7.0", path = "../ir" }
csv = "1.3.0"
regex = "1.10.2"

[features]
default = []
dwarf = ["gimli"]
emit_json = []
emit_csv = []
emit_text = []
