[package]
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
categories = ["command-line-utilities", "development-tools", "development-tools::profiling", "wasm"]
description = "Twiggy is a code size profiler."
license = "Apache-2.0/MIT"
name = "twiggy"
readme = "../README.md"
repository = "https://github.com/rustwasm/twiggy"
version = "0.7.0"
edition = "2018"

[badges]
travis-ci = { repository = "rustwasm/twiggy" }

[[bin]]
name = "twiggy"
path = "./twiggy.rs"

[dependencies]
failure = "0.1.8"
structopt = "0.3"
twiggy-analyze = { version = "=0.7.0", path = "../analyze" }
twiggy-ir = { version = "=0.7.0", path = "../ir" }
twiggy-opt = { version = "=0.7.0", path = "../opt", features = ["cli"] }
twiggy-parser = { version = "=0.7.0", path = "../parser" }
twiggy-traits = { version = "=0.7.0", path = "../traits" }

[dev-dependencies]
colored = "2.0.0"
diff = "0.1.13"
