[package]
name = "twiggy-wasm-api"
version = "0.1.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]

[lib]
crate-type = ["cdylib"]
path = "./wasm-api.rs"

[dependencies.twiggy-ir]
version = "0.1.0"
path = "../ir"

[dependencies.twiggy-analyze]
version = "0.1.0"
path = "../analyze"

[dependencies.twiggy-opt]
version = "0.1.0"
path = "../opt"

[dependencies.twiggy-traits]
version = "0.1.0"
path = "../traits"
