[package]
name = "twiggy-wasm-api"
version = "0.4.0"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>"]
license = "Apache-2.0/MIT"

[lib]
crate-type = ["cdylib"]
path = "./wasm-api.rs"

[dependencies.twiggy-ir]
version = "=0.4.0"
path = "../ir"

[dependencies.twiggy-analyze]
default-features = false
version = "=0.4.0"
path = "../analyze"
features = ["emit_json"]

[dependencies.twiggy-opt]
default-features = false
features = ["wasm"]
version = "=0.4.0"
path = "../opt"

[dependencies.twiggy-parser]
default-features = false
version = "=0.4.0"
path = "../parser"

[dependencies.twiggy-traits]
version = "=0.4.0"
path = "../traits"

[dependencies.wasm-bindgen]
version = "0.2.33"

[features]
default = ["emit_json"]
emit_json = ["twiggy-traits/emit_json"]
